# trace_kernel

ai_context/bak/: 02_機能概要.md  convert.js
ai_context/develop/: Excel_API仕様書.md  XML_API仕様書.md  実装マップ.md
ai_context/docs/: 00_philosophy.md  01_overview.md  02_workspace.md  03_work_and_editor.md  04_api_overview.md  05_api_fs.md  06_api_channel.md  07_api_state.md  logo_abstract.html  logo_concepts.html  logo_hexagon.html  logo_professional.html
ai_context/history/: 10.txt  9.txt
ai_context/spec/: 00_理念.md
ai_context/work/: transaction_api_reference.md
app/: package-lock.json  package.json
app/src/: app.css  splashscreen.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: file_system.rs  lib.rs  main.rs  process.rs  runtime.rs  scan.rs
app/src-tauri/src/parser/: dom.rs  excel.rs  mod.rs  types.rs
app/src-tauri/src/scraper/: api.rs  limiter.rs  mod.rs  types.rs
app/src-tauri/src/stream/: channel.rs  line_buffer.rs  mod.rs
app/src/app/: Entry.svelte  global.ts
app/src/app/store/: StoreDeclare.ts  StoreProcess.ts  (+12 more)
app/src/routes/: +page.svelte
app/work/: aaa.v1.5.0126.trk  excel_test.v1.5.0126.trk  ioRealテスト.v1.9.trk  test.trk  test.xlsx  vfs_test.v1.9.trk  テーブルテスト.v1.8.trk  トランザクションテスト.v1.9.trk  プロダクトキー.txt
generate-license-keypair/: generate.mjs  package-lock.json  package.json
license-server/: .gitignore  issue-license.mjs  package-lock.json  package.json  server.mjs
lp/: generate_features.cjs
lp/src/components/: Header.astro
lp/src/pages/: features.astro  philosophy.astro
(+125 files in other folders)
