[package]
name = "trace_kernel"
version = "0.1.0"
description = "Trace Kernel"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trace_kernel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.12.2"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.35"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
url = "2.4"
serde_bytes = "0.11"
thiserror = "1.0"
calamine = "0.23"
glob = "0.3"
tauri-plugin-process = "2.3.1"
